<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vmorenomarin.contapp.MainActivity">

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


    <!--Conventions
     inf = input_name_field
     ine = input_name_editable
     -->


        <android.support.design.widget.TextInputLayout
        android:id="@+id/inf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/ine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:layout_gravity="center_horizontal" />
    </android.support.design.widget.TextInputLayout>

    <!--Conventions
    ibf = input_birthday_field
    ibe = input_birthday_editable
    -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ibf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/ibe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_hint"
            android:layout_gravity="center_horizontal"
            android:onClick="showDatePickerDialog"
            />

    </android.support.design.widget.TextInputLayout>

        <!--<DatePicker-->
            <!--android:id="@+id/datePicker"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"/>-->

        <!--Conventions
     ipf = input_phone_field
     ine = input_phone_editable
     -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ipf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/ipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:layout_gravity="center_horizontal"/>
    </android.support.design.widget.TextInputLayout>


    <!--Conventions
        ief = input_email_field
        iee = input_email_editable
        -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <EditText
            android:id="@+id/iee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_gravity="center_horizontal"/>
    </android.support.design.widget.TextInputLayout>

    <!--Conventions
    ief = input_description_field
    iee = input_description_editable
    -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/idf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/ide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:layout_gravity="center_horizontal"/>

    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:id="@+id/btnConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/btn_confirmation"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:onClick="setBtnConfirmation"/>

        </LinearLayout>
</ScrollView>

</LinearLayout>
